@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* New MARKDOWN_EXTENSION_CONFIGS setting (Issue #2970)
 * Replace ``flowr.js`` with ``justified-layout.js`` by Flickr
   (does not require jQuery!)
 * ``bootblog4`` is the new default theme (Issue #2964)
